--- a/index.html
+++ b/index.html
@@ -25,97 +25,99 @@
       <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo." /></a>
     </header>
 
-    <secton class="banner">
-      <div>
-        <h1>
-          Innovation <br />
-          On <br />
-          Demand
-        </h1>
-        <p>Get Started</p>
-      </div>
-
-      <img src="img/header-img.png" alt="Image of a code snippet." />
-    </secton>
-
-    <hr />
-
-    <main>
-      <section class="section-in-2">
+    <div id="container-body">
+      <secton class="banner">
         <div>
-          <h3>Features</h3>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
-          </p>
+          <h1>
+            Innovation <br />
+            On <br />
+            Demand
+          </h1>
+          <p>Get Started</p>
         </div>
-
-        <div>
-          <h3>About</h3>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
-          </p>
-        </div>
-      </section>
-
-      <img
-        class="middle-img"
-        src="img/mid-page-accent.jpg"
-        alt="Image of code snippets across the screen"
-      />
-
-      <section class="section-in-3">
-        <div>
-          <h3>Services</h3>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
-          </p>
-        </div>
-
-        <div>
-          <h3>Product</h3>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
-          </p>
-        </div>
-
-        <div>
-          <h3>Vision</h3>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
-          </p>
-        </div>
-      </section>
-    </main>
-
-    <hr />
-
-    <footer>
-      <h3>Contact</h3>
-
-      <address>
-        123 Way 456 Street <br />
-        Somewhere, USA
-        <div>1 (888) 888-8888</div>
-        sales@greatidea.io
-      </address>
-
-      <div class="copyright">Copyright Great Idea! 2018</div>
-    </footer>
+  
+        <img src="img/header-img.png" alt="Image of a code snippet." />
+      </secton>
+  
+      <hr />
+  
+      <main>
+        <section class="section-in-2">
+          <div>
+            <h3>Features</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+  
+          <div>
+            <h3>About</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+        </section>
+  
+        <img
+          class="middle-img"
+          src="img/mid-page-accent.jpg"
+          alt="Image of code snippets across the screen"
+        />
+  
+        <section class="section-in-3">
+          <div>
+            <h3>Services</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+  
+          <div>
+            <h3>Product</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+  
+          <div>
+            <h3>Vision</h3>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+        </section>
+      </main>
+  
+      <hr />
+  
+      <footer>
+        <h3>Contact</h3>
+  
+        <address>
+          123 Way 456 Street <br />
+          Somewhere, USA
+          <div>1 (888) 888-8888</div>
+          sales@greatidea.io
+        </address>
+  
+        <div class="copyright">Copyright Great Idea! 2018</div>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
