--- a/services.html
+++ b/services.html
@@ -29,139 +29,141 @@
         <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."/></a>
       </header>
 
-      <section class="web-banner">
-        <img
-          class="services-header-img"
-          src="img/services-header.jpg"
-          alt="Our services header image"
-        />
+      <div id="container-body">
+        <section class="web-banner">
+          <img
+            class="services-header-img"
+            src="img/services-header.jpg"
+            alt="Our services header image"
+          />
+  
+          <div>
+            <h2>Services</h2>
+  
+            <p>
+              Our services provide the best digital value in nulla suscipit
+              interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
+              sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
+              aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+              neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+              facilisis iaculis.
+            </p>
+          </div>
+        </section>
+  
+        <hr />
+  
+        <section class="list">
+          <div>
+            <h3>Digital Design</h3>
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+  
+          <div>
+            <h3>UX / UI</h3>
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+  
+          <div>
+            <h3>Digital Marketing</h3>
+  
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+  
+          <div>
+            <h3>Web Development</h3>
+  
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+  
+          <div>
+            <h3>iOS Development</h3>
+  
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+  
+          <div>
+            <h3>Android Development</h3>
+  
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+            <button>Learn More</button>
+          </div>
+        </section>
+  
+        <hr />
+  
+        <section class="tail-notes">
+          <div>
+            <h3>Some Facts About Our Services</h3>
+  
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+  
+            <ul>
+              <li>Awesome thing</li>
+              <li>Amazing thing</li>
+              <li>Cool thing</li>
+              <li>Great thing</li>
+            </ul>
+          </div>
+  
+          <img
+            class="services-info-img"
+            src="img/services-info.png"
+            alt="one of our employees hard at work"
+          />
+        </section>
+      </div>
 
-        <div>
-          <h2>Services</h2>
-
-          <p>
-            Our services provide the best digital value in nulla suscipit
-            interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
-            sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
-            aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
-            neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
-            facilisis iaculis.
-          </p>
-        </div>
-      </section>
-
-      <hr />
-
-      <section class="list">
-        <div>
-          <h3>Digital Design</h3>
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-
-        <div>
-          <h3>UX / UI</h3>
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-
-        <div>
-          <h3>Digital Marketing</h3>
-
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-
-        <div>
-          <h3>Web Development</h3>
-
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-
-        <div>
-          <h3>iOS Development</h3>
-
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-
-        <div>
-          <h3>Android Development</h3>
-
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-          <button>Learn More</button>
-        </div>
-      </section>
-
-      <hr />
-
-      <section class="tail-notes">
-        <div>
-          <h3>Some Facts About Our Services</h3>
-
-          <p>
-            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
-            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
-            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
-            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
-            euismod facilisis iaculis.
-          </p>
-
-          <ul>
-            <li>Awesome thing</li>
-            <li>Amazing thing</li>
-            <li>Cool thing</li>
-            <li>Great thing</li>
-          </ul>
-        </div>
-
-        <img
-          class="services-info-img"
-          src="img/services-info.png"
-          alt="one of our employees hard at work"
-        />
-      </section>
+      <footer class="services-footer">
+        Copyright Great Idea! 2018
+      </footer>
     </div>
-
-    <footer class="services-footer">
-      Copyright Great Idea! 2018
-    </footer>
   </body>
 </html>
